商品发布页面的价格修改改为使用底部框而不是页面跳转

--- a/app/src/main/res/layout/activity_goods_publish_page.xml
+++ b/app/src/main/res/layout/activity_goods_publish_page.xml
@@ -104,6 +104,7 @@
         app:layout_constraintVertical_bias="0.0">
 
         <TextView
+            android:id="@+id/GoodsPublishPageAddImageButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:drawableTop="@drawable/ic_add_black_48dp"
