--- a/app/src/main/res/layout/activity_goods_publish_page.xml
+++ b/app/src/main/res/layout/activity_goods_publish_page.xml
@@ -112,6 +112,15 @@
             android:padding="10dp"
             android:text="添加图片" />
 
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/imagesRecyclerView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="8dp"
+            android:numColumns="3"
+            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+            app:spanCount="3"/>
+
         <TextView
             android:id="@+id/locationInfo"
             android:layout_width="match_parent"
