--- a/app/src/main/res/layout/activity_personal_user_page.xml
+++ b/app/src/main/res/layout/activity_personal_user_page.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -166,23 +167,12 @@
                         android:layout_marginTop="20dp"
                         android:src="@drawable/activity_user_page_divideline" />
 
-                    <LinearLayout
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/UserPageGoodsList"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="15dp"
-                        android:orientation="vertical">
-
-                        <com.google.android.material.tabs.TabLayout
-                            android:id="@+id/activity_user_page_user_relations_viewpage_tablayout"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content" />
-
-                        <androidx.viewpager2.widget.ViewPager2
-                            android:id="@+id/activity_user_page_user_relations_viewpage"
-                            android:layout_width="match_parent"
-                            android:layout_height="600dp" />
-
-                    </LinearLayout>
+                        tools:itemCount="10"
+                        tools:listitem="@layout/activity_home_page_goodlist_item" />
 
                 </LinearLayout>
 
